--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   sqflite: ^2.0.0+3
   shared_preferences: ^2.0.6
   platform: ^3.1.0
+  sizer: ^2.0.15
 
 dev_dependencies:
   flutter_test:
